# apa

./: .gitignore  CMakeLists.txt  README.md  bigint.h
example/: main.cpp
include/: apa.h  apa.h.bak  bigint.cpp  bigint.h
test/: test.cpp
test/include/gmp-6.1.2/: Makefile  config.status  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  libtool
test/include/gmp-6.1.2/.libs/: libgmp.so.10.3.2
test/include/gmp-6.1.2/cxx/: Makefile
test/include/gmp-6.1.2/demos/: Makefile
test/include/gmp-6.1.2/demos/calc/: Makefile
test/include/gmp-6.1.2/demos/expr/: Makefile
test/include/gmp-6.1.2/doc/: Makefile
test/include/gmp-6.1.2/mpf/: Makefile
test/include/gmp-6.1.2/mpn/: Makefile
test/include/gmp-6.1.2/mpq/: Makefile
test/include/gmp-6.1.2/mpz/: Makefile
test/include/gmp-6.1.2/printf/: Makefile
test/include/gmp-6.1.2/rand/: Makefile
test/include/gmp-6.1.2/scanf/: Makefile
test/include/gmp-6.1.2/tests/: Makefile
test/include/gmp-6.1.2/tests/cxx/: Makefile
test/include/gmp-6.1.2/tests/devel/: Makefile
test/include/gmp-6.1.2/tests/misc/: Makefile
test/include/gmp-6.1.2/tests/mpf/: Makefile
test/include/gmp-6.1.2/tests/mpn/: Makefile
test/include/gmp-6.1.2/tests/mpq/: Makefile
test/include/gmp-6.1.2/tests/mpz/: Makefile
test/include/gmp-6.1.2/tests/rand/: Makefile
test/include/gmp-6.1.2/tune/: Makefile
